--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <html lang="en">
 
   <header>
-    <title>Harrison Kong's Resume</title>
+    <title>Jaziba Anam's Resume</title>
       <link rel="stylesheet" href="css/master.css">
       <link rel="FaviIcon" href="favicon.ico" type="image/x-icon">
       <link rel="shortcut" href="favicon" tye="image/x-icon">
